2005-02-21  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/exclude1.s: Use ".dc.a".
	* ld-elfvsb/hidden2.s: Likewise.

2005-02-21  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/warn1.d: Specify -Ttext.
	* ld-scripts/align.exp (align2a, align2b: Don't run on aout targets.
	* ld-scripts/align2.t: Discard all but .text and .data.
	* ld-scripts/align2a.d: Accept non-readonly for coff.
	* ld-scripts/align2b.d: Likewise.
	* lib/ld-lib.exp (is_aout_format): New function.

2005-02-18  Alan Modra  <amodra@bigpond.net.au>

	* ld-scripts/align2a.d: Don't assume anything about section
	padding or alignment, or max page size.  Allow 64-bit addresses.
	* ld-scripts/align2b.d: Likewise.

2005-02-17  Zack Weinberg  <zack@codesourcery.com>

	* ld-scripts/align.exp: Rename existing "ALIGN" test to "align1".
	Add dump tests "align2a", "align2b", "align2c".
	* ld-scripts/align2.t, ld-scripts/align2a.s, ld-scripts/align2a.d
	* ld-scripts/align2b.s, ld-scripts/align2b.d
	* ld-scripts/align2c.s, ld-scripts/align2c.d: New files.

2005-02-17  Alexandre Oliva  <aoliva@redhat.com>

	* ld-frv/fdpic-static-6.d: Update.
	* ld-frv/fdpic*.d: Remove explicit -mfdpic from #as.  Update
	spelling of errors and warnings.

2005-02-15  Nigel Stephens  <nigel@mips.com>
	    Maciej W. Rozycki  <macro@mips.com>

	* ld-mips-elf/mips16-hilo.d: New test for the R_MIPS16_HI16 and
	R_MIPS16_LO16 relocs.
	* ld-mips-elf/mips16-hilo-n32.d: Likewise, for the n32 ABI.
	* ld-mips-elf/mips16-hilo.s: Auxiliary source for the new tests.
	* ld-mips-elf/mips-elf.exp: Run the new tests.

2005-02-14  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* ld-sparc/sparc.exp: Enable on Solaris.  Disable 32-bit tests
	on sparc64-elf.

2005-02-13  Jan Beulich  <jbeulich@novell.com>

	* ld-elfvers/vers.exp (as_options): New. Set to -x for ia64.
	(build_binary): Pass as_options to ld_assemble.
	(test_ldfail): Likewise.
	(build_exec): Likewise.
	Pass as_options to run_ld_link_tests.
	* ld-ia64/tlsbin.s: Add .explicit.